--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ after_script:
   - git config user.email "whr9743@163.com"
   - git add -A
   - git commit -m "Update documents"
-  - git push --force  "https://db9fc322f86246cb13138bfbe6403b6f8a5bbc14@https://github.com/HaiRongHaHA/react-ts.git" "master:gh-pages"
+  - git push --force  "https://${GH_TOKEN}@${GH_REF}" "master:gh-pages"
 branches:
   only:
     - master
