--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ node_js:
     - '11'
 install:
   - npm install
+script:
+  - npm run build
 after_script:
   - cd ./dist
   - git init
@@ -10,7 +12,7 @@ after_script:
   - git config user.email "whr9743@163.com"
   - git add -A
   - git commit -m "Update documents"
-  - git push --force  "https://${GH_TOKEN}@${GH_REF}" "master:gh-pages"
+  - git push --force  "https://${GH_TOKEN}@${GH_REF}" "main:gh-pages"
 branches:
   only:
-    - master
+    - main
